# neural-gaming

./: CMakeLists.txt  LICENSE  Main.cpp  build&run.sh  main.cpp  testing.cpp
data/: saves.sqlite3
lib/random/: OldRandom.cpp  OldRandom.hpp  Random.cpp  Random.hpp
lib/vector2D/: Vector.cpp  Vector.hpp
scripts/: build&run.sh  build.sh  deleteDB.sh
src/: sql.cpp
src/games/CTF/entities/: Character.cpp  Character.hpp  Entity.cpp  Entity.hpp  Flagpole.cpp  Flagpole.hpp
src/games/CTF/entities/agents/: NEATAgent.cpp  NEATAgent.hpp
src/games/CTF/environment/: Environment.cpp  Environment.hpp  TrainingEnvironment.cpp  TrainingEnvironment.hpp
src/guiEvents/: events.cpp  events.hpp
src/neuralNetworks/NEAT/: Brain.cpp  Brain.hpp  Connection.cpp  Connection.hpp  Node.cpp  Node.hpp
src/neuralNetworks/activationFunctions/: linear.cpp  linear.hpp
